Wall can be instantiated

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,8 +12,10 @@
   <script src="lib/jasmine-2.7.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/wall.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/wallSpec.js"></script>
 
 </head>
 
