--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,9 +12,11 @@
   <script src="lib/jasmine-2.7.0/boot.js"></script>
 
   <!-- include source files here... -->
+  <script src="src/world.js"></script>
   <script src="src/wall.js"></script>
 
   <!-- include spec files here... -->
+  <script src="spec/worldSpec.js"></script>
   <script src="spec/wallSpec.js"></script>
 
 </head>
