added jasmine tests checking dimensions and position of pacmena

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <canvas id='world' width='600' height='600'></canvas>
+<script src="src/pacMean.js" charset="utf-8"></script>
 <script>
   window.onload=function() {
     canvas = document.getElementById('world');
@@ -6,5 +7,6 @@
 
     context.fillStyle='black';
     context.fillRect(0,0,canvas.width,canvas.height);
-}
+    pacMean = new PacMean(300, 300);
+  }
 </script>
