Made a grid with walls and blanks and displayed it

--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
-<canvas id='world' width='600' height='600'></canvas>
-<script>
-  window.onload=function() {
-    canvas = document.getElementById('world');
-    context = canvas.getContext('2d');
-
-    context.fillStyle='black';
-    context.fillRect(0,0,canvas.width,canvas.height);
-}
-</script>
+<canvas id='global-canvas' width='480' height='480'></canvas>
+<script  type="text/javascript" src="src/world.js"></script>
+<script  type="text/javascript" src="src/wall.js"></script>
+<script type="text/javascript" src="controllers/pacmean.js"></script>
