--- a/src/pacSprite.html
+++ b/src/pacSprite.html
@@ -22,49 +22,106 @@
 		var pacMeanImg = new Image();
 		pacMeanImg.src = "images/pacmean-animation.png";
 
+		function gameLoop () {
+		  window.requestAnimationFrame(gameLoop);
+
+		  pacMean.update();
+		  pacMean.render();
+		}
+
 		function sprite (options) {
-			var that = {};
+
+			var that = {},
+				x = 0, y = 0,
+				frameIndex = 0,
+				tickCount = 0,
+				ticksPerFrame = options.ticksPerFrame || 0,
+				numberOfFrames = options.numberOfFrames || 1;
 
 			that.context = options.context;
 			that.width = options.width;
 			that.height = options.height;
 			that.image = options.image;
 			that.x = 0;
+			that.loop = options.loop;
+
+			that.update = function () {
+        tickCount += 1;
+
+        if (tickCount > ticksPerFrame) {
+        	tickCount = 0;
+
+          // Go to the next frame
+					if (frameIndex < numberOfFrames - 1) {
+							// Go to the next frame
+							frameIndex += 1;
+					} else if (that.loop) {
+							frameIndex = 0;
+					}
+				}
+    	};
+
 			that.render = function() {
 				//Draw the animation
 				that.context.drawImage(
 					that.image,
+					frameIndex * that.width / numberOfFrames,
 					0,
-					0,
-					that.width,
+					that.width / numberOfFrames,
 					that.height,
-					that.x,
-					0,
-					that.width,
+					x,
+					y,
+					that.width / numberOfFrames,
 					that.height);
 			};
+
+			that.nudge = function(h, v){
+				x += h;
+				y += v
+			}
 			return that;
 		}
 
 		var canvas = document.getElementById("pacMeanAnimation")
-	  canvas.width = 129;
-	  canvas.height = 130;
+	  canvas.width = 600;
+	  canvas.height = 600;
 
 		var pacMean = sprite({
 			context: canvas.getContext("2d"),
-			width: 129,
+			width: 389,
 			height: 130,
-			image: pacMeanImg
-		})
+			image: pacMeanImg,
+			numberOfFrames: 3,
+			ticksPerFrame: 10,
+			loop: true
+		});
 
 
 	function renderSprite() {
 		pacMean.render();
 	}
 
-	function nudge() {
-		pacMean.x += 1;
-	}
+
+	// Start the game loop as soon as the sprite sheet is loaded
+			pacMeanImg.addEventListener("load", gameLoop);
+
+
+// frames 0, 1, 2, 3, 4, 5, 6, 7, 8, 9
+// rightFrames = [0, 5, 6]
+// leftFrame = [0, 1, 2]
+// dir = 0 for right, 1, for left, etc
+frameIndexes = [[0, 5, 6], [0, 1, 2], ...]
+frameIndexes[dir][frameIndex]
+frameIndexes[0] would be [0, 5, 6]
+
+currently frameIndex is looping 0, 1, 2, 0, 1, 2, 0, 1, 2,
+set dir to be 0, 1, 2, or 3 based on direction being right, left, etc
+var // XXX:  = 0;
+var LEFT = 1;
+var UP = 2;
+var DOWN = 3;
+
+then frame
 	</script>
 	</body>
 </html>
