world now has pacdots

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <canvas id='global-canvas' width='570' height='660'></canvas>
 <script  type="text/javascript" src="src/world.js"></script>
 <script  type="text/javascript" src="src/wall.js"></script>
+<script  type="text/javascript" src="src/pacDot.js"></script>
 <script src="src/pacMean.js" charset="utf-8"></script>
 <script src="src/interface.js" charset="utf-8"></script>
