--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,14 @@
   <!-- include source files here... -->
   <script src="src/world.js"></script>
   <script src="src/wall.js"></script>
+  <script src="src/pacDot.js"></script>
   <script src="src/pacMean.js"></script>
 
 
   <!-- include spec files here... -->
   <script src="spec/worldSpec.js"></script>
   <script src="spec/wallSpec.js"></script>
+  <script src="spec/pacDotSpec.js"></script>
   <script src="spec/pacMeanSpec.js"></script>
 
 </head>
