--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <canvas id='global-canvas' width='570' height='660'></canvas>
-
+<link rel="stylesheet" href="./styling/stylesheets/styles.css">
 <script  type="text/javascript" src="src/world.js"></script>
 <script  type="text/javascript" src="src/wall.js"></script>
 <script  type="text/javascript" src="src/pacDot.js"></script>
