--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <canvas id='global-canvas' width='570' height='660'></canvas>
 <script type="text/javascript" src="src/world.js"></script>
 <script type="text/javascript" src="src/wall.js"></script>
-<script src="animationFrame.js"></script>
+<script src="src/animationFrame.js" charset="utf-8"></script>
 <script src="src/sprite.js" charset="utf-8"></script>
 <script src="src/pacMean.js" charset="utf-8"></script>
 <script src="src/gameController.js" charset="utf-8"></script>
