--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,6 +17,7 @@
   <script src="src/sprite.js"></script>
   <script src="src/pacDot.js"></script>
   <script src="src/pacMean.js"></script>
+  <script src="src/ghost.js"></script>
   <script src="src/score.js"></script>
   <script src="src/gameController.js"></script>
 
@@ -26,6 +27,7 @@
   <script src="spec/spriteSpec.js"></script>
   <script src="spec/pacDotSpec.js"></script>
   <script src="spec/pacMeanSpec.js"></script>
+  <script src="spec/ghostSpec.js"></script>
   <script src="spec/scoreSpec.js"></script>
   <script src="spec/gameControllerSpec.js"></script>
 </head>
