PacMean has home made Wacka sound

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <canvas id='global-canvas' width='570' height='660'></canvas>
 <link rel="stylesheet" href="./styling/stylesheets/styles.css">
+<script  type="text/javascript" src="src/wacka.js"></script>
 <script  type="text/javascript" src="src/world.js"></script>
 <script  type="text/javascript" src="src/wall.js"></script>
 <script src="src/animationFrame.js" charset="utf-8"></script>
