--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here... -->
   <script src="src/world.js"></script>
+  <script src="src/wacka.js"></script>
   <script src="src/wall.js"></script>
   <script src="src/sprite.js"></script>
   <script src="src/pacDot.js"></script>
