--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -18,6 +18,7 @@
   <script src="src/pacDot.js"></script>
   <script src="src/pacMean.js"></script>
   <script src="src/score.js"></script>
+  <script src="src/endstate.js"></script>
   <script src="src/gameController.js"></script>
 
   <!-- include spec files here... -->
